--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,18 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
+  - docker build -t sandepshiv/docker-reac -f Dockerfile.dev .
 
 script:
-  - docker run stephengrider/docker-react npm run test -- --coverage
+  - docker run sandeepshiv/docker-reac npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
   region: "us-west-2"
-  app: "docker"
-  env: "Docker-env"
-  bucket_name: "elasticbeanstalk-us-west-2-306476627547"
-  bucket_path: "docker"
+  app: "docker-reac"
+  env: "Dockerreac-env"
+  bucket_name: "elasticbeanstalk-us-east-2-173071480411"
+  bucket_path: "docker-reac"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
